--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="main.js">
-       
-    </script>
+    <script src="my.js"></script>
 </body>
 </html>
